src/stages/snapshots/lumina2__stages__parse__test__expr__assign_expression.snap
---
source: src/stages/parse.rs
expression: some_ident = 1 + 2
---
Assign {
    assignee: Variable(
        Variable {
            variable: Ident(
                "some_ident",
            ),
        },
    ),
    tok_eq: Eq,
    value: Binary(
        Binary {
            lhs: Literal(
                Integer(
                    IntegerLiteral(
                        IntLit(
                            1,
                        ),
                    ),
                ),
            ),
            op: Plus(
                Plus,
            ),
            rhs: Literal(
                Integer(
                    IntegerLiteral(
                        IntLit(
                            2,
                        ),
                    ),
                ),
            ),
        },
    ),
}
