src/stages/snapshots/lumina2__stages__parse__test__expr__assign_simple.snap
---
source: src/stages/parse.rs
expression: some_ident = some_value
---
Assign {
    assignee: Variable(
        Variable {
            variable: Ident(
                "some_ident",
            ),
        },
    ),
    tok_eq: Eq,
    value: Variable(
        Variable {
            variable: Ident(
                "some_value",
            ),
        },
    ),
}
