src/stages/snapshots/lumina2__stages__parse__test__expr__binary_literal.snap
---
source: src/stages/parse.rs
expression: a + 2
---
Binary {
    lhs: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    op: Plus(
        Plus,
    ),
    rhs: Literal(
        Integer(
            IntegerLiteral(
                IntLit(
                    2,
                ),
            ),
        ),
    ),
}
