src/stages/snapshots/lumina2__stages__parse__test__expr__binary_logical_and.snap
---
source: src/stages/parse.rs
expression: a && 2
---
Binary {
    lhs: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    op: LogicalAnd(
        AmpAmp,
    ),
    rhs: Literal(
        Integer(
            IntegerLiteral(
                IntLit(
                    2,
                ),
            ),
        ),
    ),
}
