src/stages/snapshots/lumina2__stages__parse__test__expr__binary_variable.snap
---
source: src/stages/parse.rs
expression: a + b
---
Binary {
    lhs: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    op: Plus(
        Plus,
    ),
    rhs: Variable(
        Variable {
            variable: Ident(
                "b",
            ),
        },
    ),
}
