src/stages/snapshots/lumina2__stages__parse__test__expr__call_no_args.snap
---
source: src/stages/parse.rs
expression: a()
---
Call {
    callee: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    tok_l_paren: LParen,
    arguments: PunctuatedList {
        items: [],
        punctuation: [],
    },
    tok_r_paren: RParen,
}
