src/stages/snapshots/lumina2__stages__parse__test__expr__call_single_arg_trailing.snap
---
source: src/stages/parse.rs
expression: "a(1,)"
---
Call {
    callee: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    tok_l_paren: LParen,
    arguments: PunctuatedList {
        items: [
            Literal(
                Integer(
                    IntegerLiteral(
                        IntLit(
                            1,
                        ),
                    ),
                ),
            ),
        ],
        punctuation: [
            Comma,
        ],
    },
    tok_r_paren: RParen,
}
