src/stages/snapshots/lumina2__stages__parse__test__expr__expr_assignment.snap
---
source: src/stages/parse.rs
expression: some_ident = 123 + other_ident
---
Assign(
    Assign {
        assignee: Variable(
            Variable {
                variable: Ident(
                    "some_ident",
                ),
            },
        ),
        tok_eq: Eq,
        value: Binary(
            Binary {
                lhs: Literal(
                    Integer(
                        IntegerLiteral(
                            IntLit(
                                123,
                            ),
                        ),
                    ),
                ),
                op: Plus(
                    Plus,
                ),
                rhs: Variable(
                    Variable {
                        variable: Ident(
                            "other_ident",
                        ),
                    },
                ),
            },
        ),
    },
)
